k8s/evaluation-service/evaluation-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service-svc
 
spec:
  selector:
    app: evaluation-service
  ports:
  - port: 8004
    targetPort: 8004
    protocol: TCP
