k8s/evaluation-service/evaluation-service-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: evaluation-service-gateway
 
spec:
  gatewayClassName: nginx
  listeners:
  - name: http-evaluation-service-8004
    protocol: HTTP
    port: 8004
    allowedRoutes:
      namespaces:
        from: Same
