k8s/evaluation-service/evaluation-service-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: evaluation-service-httproute
 
spec:
  parentRefs:
    - name: evaluation-service-gateway
      sectionName: http-evaluation-service-8001
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: evaluation-service-svc
          port: 8004
